# Code-theory-project

./: .gitignore  LICENSE.md
Enigma/: CMakeLists.txt  Enigma  main.cpp
Playfair/: CMakeLists.txt  code.txt  main.cpp  playfair.cpp  playfair.h  test.txt
Playfair/dictionaries/: german.txt  spanish.txt
Playfair/dictionaries_without_j/: dutch.txt  english.txt  french.txt  german.txt  spanish.txt
assignment/: assignment.txt
dictionaries/: dutch.txt  english.txt  german.txt  spanish.txt
input/: 01-OPGAVE-vigenerePlus.txt  01-SOLUTION-vigenerePlus.txt  03-OPGAVE-adfgvx.txt  03-SOLUTION-adfgvx.txt  04-OPGAVE-enigma.txt
report/: report.aux  report.out  report.tex  report.toc
src/: CMakeLists.txt  main.cpp
src/Enigma/: Enigma.h
src/Playfair/: playfair.h
src/Playfair/dictionaries/: dutch.txt
src/Playfair/dictionaries_without_j/: french.txt
src/System/: System.cpp  System.h
src/Techniques/: Enigma.cpp  Enigma.h
src/Techniques/Enigma/: AdvancedTuringBombe.cpp  AdvancedTuringBombe.h  CribGraph.h  Enigma.cpp  Enigma.h  EnigmaNode.cpp  EnigmaNode.h  GammaGraph.h
src/Techniques/Playfair/: Playfair.cpp  Playfair.h  PlayfairDeprecated.cpp  PlayfairDeprecated.h  Summary.txt  logQ.h  main.cpp  playfair.cpp  run1.txt  run10.txt  run11.txt  run12.txt  run13.txt  run14.txt  run15.txt  run16.txt  run17.txt  run18.txt  run19.txt  run2.txt  run20.txt  run21.txt  run22.txt  run23.txt  run24.txt  run25.txt  run3.txt  run4.txt  run5.txt  run6.txt  run7.txt  run8.txt  run9.txt
src/Techniques/Playfair/dictionaries/: english.txt  french.txt
src/Techniques/VigenerePlus/: Transposition.cpp  Vigenere.cpp  columnTranspose_test.txt  vinigere_solutions.txt
src/Techniques/adfgvx/: adfgvx.cpp  adfgvx.h  adfgvx_solutions.txt  posibility.txt
src/Utilities/: Utilities.cpp  Utilities.h
vigenerePlus/: CMakeLists.txt  Vigenere.cpp  Vigenere.h  main.cpp
